fix - Fixing a main footer paddings on mobile version

--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -113,3 +113,11 @@
     gap: 1rem;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .main-footer {
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 2rem;
+  }
+}
